...
          }
        } else {
          showSearchBar = searching || searchCompleted || locationQuery.isNotEmpty()
        }
      },
      placeholder = { Text(stringResource(id = R.string.search_location)) },
      modifier = modifier.testTag("LocationComponent"),
      trailingIcon = {
        when {
          searching -> CircularProgressIndicator()
          locationQuery.isNotEmpty() && searchCompleted ->
              IconButton(onClick = clearLocationInput, modifier = Modifier.testTag("ClearIcon")) {
                Icon(imageVector = Icons.Default.Clear, contentDescription = "Clear")
...
